# z-tipo-extension

./: .gitignore  LICENSE  README.md  __init__.py  dantaggen.py  install.py  installer.py  pyproject.toml  requirements.txt  tipo_installer.py
.github/workflows/: publish.yml
examples/: tipo-demo-workflow.json
kgen/: formatter.py  generate.py  logging.py  metainfo.py
nodes/: tipo.py
scripts/: dtg.py  tipo.py
tag-list/: characters.txt  copyrights.txt  meta.txt
