[project]
name = "z-tipo-extension"
description = "A general extension to utilize TIPO or DanTagGen to do 'text-presampling' based on KGen library: [a/https://github.com/KohakuBlueleaf/KGen](https://github.com/KohakuBlueleaf/KGen)"
version = "1.0.3"
license = {file = "LICENSE"}
dependencies = ["tipo-kgen>=0.1.5", "transformers"]

[project.urls]
Repository = "https://github.com/KohakuBlueleaf/z-tipo-extension"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kblueleaf"
DisplayName = "z-tipo-extension"
Icon = "https://kblueleaf.net/_astro/tipo-icon.CtiA3WfM.jpg"
